[gd_scene load_steps=6 format=3 uid="uid://dqfgf43inpmdg"]

[ext_resource type="Script" uid="uid://bcr2teys4k50f" path="res://UI/netplay_setup.gd" id="1_poejy"]
[ext_resource type="Texture2D" uid="uid://c3vimms87tjyt" path="res://Textures/fillerBG.png" id="2_vi8mb"]
[ext_resource type="Script" uid="uid://d30p27ii7dudq" path="res://Scenes/Courses/filler_bg_scroll.gd" id="3_0wux7"]
[ext_resource type="Texture2D" uid="uid://cd84ru4vw1836" path="res://Textures/tempEmblem.png" id="4_vi8mb"]
[ext_resource type="FontFile" uid="uid://b8xsi0etksurk" path="res://Fonts/FOT-Rodin Pro B.otf" id="5_0wux7"]

[node name="NetplaySetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_poejy")

[node name="FillerBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2196.0
offset_top = -1794.5
offset_right = 2196.0
offset_bottom = 1794.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vi8mb")
stretch_mode = 1
script = ExtResource("3_0wux7")

[node name="ConsoleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.012
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 0.22399998
offset_right = 1149.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 32
text = "words"
autowrap_mode = 1

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -465.0
offset_top = -76.0
offset_right = -174.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Host Server"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -465.0
offset_right = -174.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Join Server"

[node name="ChatSend" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 687.0
offset_top = 406.0
offset_right = -174.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Send"

[node name="lobby" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 395.0
offset_top = 157.0
offset_right = -466.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Start Racing!"

[node name="IpInput" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -76.0
offset_right = -463.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "localhost"
placeholder_text = "IP to join (doesn't matter if hosting)"

[node name="PortInput" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -801.0
offset_top = 1.0
offset_right = -463.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "5029"
placeholder_text = "Port to join or host on"

[node name="ChatInput" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 149.0
offset_top = 407.0
offset_right = -463.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Chat message..."

[node name="UsernameInput" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -800.0
offset_top = 83.0
offset_right = -463.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Username..."

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2

[node name="EmblemUpload" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -458.0
offset_top = 84.0
offset_right = -173.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Upload Emblem
"

[node name="EmblemDesc" type="Label" parent="EmblemUpload"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.046000004
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.8899994
offset_top = 1.0
offset_right = -8.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 15
text = "upload a 32x32 pixel image
with the button above, OR
drap + drop anywhere!"
horizontal_alignment = 1

[node name="Emblem" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = 409.0
offset_right = -40.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vi8mb")
stretch_mode = 4

[node name="Title" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 503.0
offset_top = 234.0
offset_right = -448.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Return to Title"

[node name="MusicCredit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 301.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("5_0wux7")
theme_override_font_sizes/font_size = 24
text = "â™ªstuck - John \"Joy\" Tay"
vertical_alignment = 2

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="ChatSend" to="." method="_on_chat_send_pressed"]
[connection signal="pressed" from="lobby" to="." method="_on_lobby_pressed"]
[connection signal="text_changed" from="UsernameInput" to="." method="_on_username_text_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="EmblemUpload" to="." method="_on_emblem_upload_pressed"]
[connection signal="pressed" from="Title" to="." method="_on_title_pressed"]
